<resources>
    <string name="_private">Private</string>
    <string name="_public">Public</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept_and_continue">Accept And Continue</string>
    <string name="access_offline_videos">Access offline videos</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="add_remove_video_error">Something went wrong, please try again</string>
    <string name="added_on">Added on:</string>
    <string name="ads">Ads</string>
    <string name="ads_interstitial_url">interstitial</string>
    <string name="album">Album</string>
    <string name="album_details_albumname">Album \"%s\"</string>
    <string name="album_details_tags">Tags:</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="all_categories">All Categories</string>
    <string name="all_hd">All HD</string>
    <string name="all_time">All time</string>
    <string name="all_videos">All Videos</string>
    <string name="alphabetical">A-Z</string>
    <string name="and_much_more">And Much More!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appVersionName">6.11.0</string>
    <string name="app_download_url">fun/android</string>
    <string name="app_name">CarouselView</string>
    <string name="app_name_discreet">PH Viewer</string>
    <string name="app_name_ph">Pornhub</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied_after_restart_message">Please Note that the changes will take effect after restarting the app</string>
    <string name="apply">Apply</string>
    <string name="apply_and_go">Apply &amp; Go</string>
    <string name="at_least_x_chars">At least %d characters</string>
    <string name="auth_req_comments">%s or %s now to post a comment!</string>
    <string name="auto_play">AutoPlay</string>
    <string name="auto_rotate">Auto-Rotate</string>
    <string name="back">Back</string>
    <string name="bio">BIO:</string>
    <string name="birthplace">BIRTHPLACE:</string>
    <string name="born">BORN:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browse_free">Browse free Pornhub</string>
    <string name="by">By:</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel all</string>
    <string name="cancel_downloading_video_q">Cancel adding this video?</string>
    <string name="cancelling_">Cancelling…</string>
    <string name="cast">Cast</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_conn_suspended">Disconnected from %s</string>
    <string name="cast_connected_to">Connected to %s</string>
    <string name="cast_connecting_to">Connecting to %s</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_error_connect_to_device">Could not connect to cast device</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="collect_anonymous_data">Anonymous usage and crash reports</string>
    <string name="enhance_experience">and enhance your experience</string>
    <string name="error_default">Oops! Something went wrong. Please try again in a few moments.</string>
    <string name="height">HEIGHT:</string>
    <string name="last_month">Last\nMonth</string>
    <string name="loading">Loading…</string>
    <string name="log_in">Log in</string>
    <string name="manage_priv_settings_description">This option is to turn on/off the collect of anonymous usage statistics and crash reports done by The Pornhub Android App or any of its affiliate. Remember that turning off data might result in a degraded app experience.</string>
    <string name="monthly_rank">Monthly\nRank</string>
    <string name="non_premium_domain_override">www.pornhub.com replacement</string>
    <string name="non_premium_domain_override_description">Set custom domain without protocol and trailing slashes, eg. www-pornhub-dev.mgcorp.co</string>
    <string name="or">or</string>
    <string name="password_lock_summary">You can secure the app with passcode (To modify your current passcode, disable then enable the option).</string>
    <string name="password_lock_title">Use a passcode</string>
    <string name="pref_privacy">privacy_policy</string>
    <string name="pref_stage_input">stage_input</string>
    <string name="pref_terms">terms</string>
    <string name="pref_use_stage">use_stage</string>
    <string name="pref_web_domain_non_premium">override_web_domain_non_premium</string>
    <string name="pref_web_domain_premium">override_web_domain_premium</string>
    <string name="premium_domain_override">www.pornhubpremium.com replacement</string>
    <string name="premium_domain_override_description">Set custom domain without protocol and trailing slashes, eg. www-pornhubpremium-dev.mgcorp.co</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="resend_email">Resend confirmation email</string>
    <string name="retry">Retry</string>
    <string name="sign_up_excl">Sign up!</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="signup_upsell">Premium Member</string>
    <string name="signup_upsell_prefix">As a</string>
    <string name="signup_upsell_suffix">Enjoy:</string>
    <string name="stage_dev_input_description">To use stage API, input a stage number. For stage 1 leave blank or \'0\'. To use Dev domain, input the domain only without protocol and trailing slash (eg. www.my-dev-mgcorp.co). Restart (kill-relaunch) required</string>
    <string name="stage_dev_input_title">Stage number or Dev domain Input</string>
    <string name="stage_dev_title">Enable Stage or Dev target</string>
    <string name="start_free_week_on_premium">Start free week on premium</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="use_stage_or_dev">Use Stage API or a Dev domain instead of Prod API</string>
    <string name="user_profile_age">Age: </string>
    <string name="user_profile_gender">Gender: </string>
    <string name="user_profile_interested_in">Interested in: </string>
    <string name="user_profile_more_info">More info</string>
    <string name="user_profile_name">Name: </string>
    <string name="user_profile_profile_viewed">Profile Viewed: </string>
    <string name="user_profile_relationship_status">Relationship Status: </string>
    <string name="weekly_rank">Weekly\nRank</string>
    <string name="weight">WEIGHT:</string>
    <string name="yearly_rank">Yearly\nRank</string>
    <string name="you_agree">By signing up, you agree to our </string>
</resources>