<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:gravity="center" android:id="@+id/yearly_rank" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/yearly_rank" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/last_month" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/yearly_rank_value"/>
        <TextView android:gravity="center" android:id="@+id/last_month" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/last_month" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/monthly_rank" app:layout_constraintRight_toRightOf="@+id/yearly_rank" app:layout_constraintTop_toBottomOf="@+id/last_month_value"/>
        <TextView android:gravity="center" android:id="@+id/monthly_rank" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/monthly_rank" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/weekly_rank" app:layout_constraintRight_toLeftOf="@+id/last_month" app:layout_constraintTop_toBottomOf="@+id/monthly_rank_value"/>
        <TextView android:gravity="center" android:id="@+id/weekly_rank" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/weekly_rank" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/monthly_rank" app:layout_constraintTop_toBottomOf="@+id/weekly_rank_value"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/yearly_rank_value" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/last_month_value" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/last_month_value" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/monthly_rank_value" app:layout_constraintRight_toRightOf="@+id/yearly_rank_value" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/monthly_rank_value" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/weekly_rank_value" app:layout_constraintRight_toLeftOf="@+id/last_month_value" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/weekly_rank_value" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/monthly_rank_value" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:id="@+id/bio" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/bio" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/weekly_rank"/>
        <TextView android:id="@+id/born" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/born" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/bio"/>
        <TextView android:id="@+id/birthplace" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/birthplace" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/born"/>
        <TextView android:id="@+id/height" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/height" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/birthplace"/>
        <TextView android:id="@+id/weight" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:text="@string/weight" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/height"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
