<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="30sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/sign_up_for_free" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/subtitle" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/enhance_experience" android:layout_below="@+id/title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
    <ScrollView android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/agree_by_sign_up" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_email" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:errorEnabled="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                <EditText android:id="@+id/email" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/prompt_email" style="@style/AuthEditTextStyle.Email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_name" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:errorEnabled="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/input_layout_email">
                <EditText android:id="@+id/name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/prompt_username" style="@style/AuthEditTextStyle.Email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_layout_password" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:errorEnabled="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/input_layout_name">
                <EditText android:id="@+id/password" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/prompt_password" style="@style/AuthEditTextStyle.Password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:id="@+id/button_sign_up" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/sign_up_excl" android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/txt_or" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/input_layout_password" style="@style/ButtonSignUp"/>
            <TextView android:id="@+id/txt_or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:text="@string/or" app:layout_constraintBottom_toBottomOf="@+id/button_sign_up" app:layout_constraintEnd_toStartOf="@+id/button_login" app:layout_constraintStart_toEndOf="@+id/button_sign_up" app:layout_constraintTop_toTopOf="@+id/button_sign_up"/>
            <TextView android:id="@+id/button_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp" android:text="@string/log_in" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/button_sign_up" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/txt_or" app:layout_constraintTop_toTopOf="@+id/button_sign_up" style="@style/ButtonLogin"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/button_get_premium" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/button_sign_up" style="@style/ButtonGetPremium">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_drawer_star"/>
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_free_week_on_premium" style="@style/ButtonGetPremiumTextStyle"/>
            </LinearLayout>
            <TextView android:id="@+id/tv_upsell_prefix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/signup_upsell_prefix" app:layout_constraintEnd_toStartOf="@+id/tv_upsell" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/button_get_premium"/>
            <TextView android:textStyle="bold" android:textColor="@color/orange" android:id="@+id/tv_upsell" android:paddingLeft="6dp" android:paddingRight="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signup_upsell" app:layout_constraintBottom_toBottomOf="@+id/tv_upsell_prefix" app:layout_constraintEnd_toStartOf="@+id/tv_upsell_suffix" app:layout_constraintStart_toEndOf="@+id/tv_upsell_prefix" app:layout_constraintTop_toTopOf="@+id/tv_upsell_prefix"/>
            <TextView android:id="@+id/tv_upsell_suffix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signup_upsell_suffix" app:layout_constraintBottom_toBottomOf="@+id/tv_upsell_prefix" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/tv_upsell" app:layout_constraintTop_toTopOf="@+id/tv_upsell_prefix"/>
            <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline_vertical_05" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
            <ImageView android:id="@+id/iv_upsell_no_ads" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="24dp" android:src="@drawable/img_no_ads_large" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_upsell_prefix"/>
            <ImageView android:id="@+id/iv_upsell_dl_and_watch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_watch_offline" app:layout_constraintBottom_toBottomOf="@+id/iv_upsell_no_ads" app:layout_constraintStart_toEndOf="@+id/guideline_vertical_05" app:layout_constraintTop_toTopOf="@+id/iv_upsell_no_ads"/>
            <ImageView android:id="@+id/iv_upsell_vr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="32dp" android:src="@drawable/img_vr" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_upsell_no_ads"/>
            <ImageView android:id="@+id/iv_upsell_faster_streaming" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_faster_streaming_large" app:layout_constraintBottom_toBottomOf="@+id/iv_upsell_vr" app:layout_constraintStart_toEndOf="@+id/guideline_vertical_05" app:layout_constraintTop_toTopOf="@+id/iv_upsell_vr"/>
            <TextView android:id="@+id/tv_upsell_bottom_caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/and_much_more" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_upsell_vr"/>
            <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tv_upsell_bottom_caption"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView android:id="@+id/agree_by_sign_up" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/you_agree" app:layout_constraintBottom_toTopOf="@+id/resend_email" app:layout_constraintEnd_toStartOf="@+id/terms_and_conditions" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="0" style="@style/SignupDisclaimerTextStyle.NonClickable"/>
    <TextView android:id="@+id/terms_and_conditions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions" app:layout_constraintBottom_toBottomOf="@+id/agree_by_sign_up" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/agree_by_sign_up" app:layout_constraintTop_toTopOf="@+id/agree_by_sign_up" style="@style/SignupDisclaimerTextStyle.Clickable"/>
    <TextView android:gravity="center" android:id="@+id/resend_email" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/resend_email" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/SignupDisclaimerTextStyle.Clickable"/>
</androidx.constraintlayout.widget.ConstraintLayout>
