<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/container_user_profile_detailed_info" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="#999" android:id="@+id/user_info_label_moreinfo" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/user_profile_more_info"/>
    <TextView android:textColor="#999" android:id="@+id/user_info_label_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile_name" android:layout_below="@+id/user_info_label_moreinfo"/>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/user_info_label_moreinfo" android:layout_toEndOf="@+id/user_info_label_name">
        <TextView android:textColor="@android:color/white" android:id="@+id/user_info_name" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/imageViewVerified" android:visibility="gone" android:layout_width="14dp" android:layout_height="14dp" android:src="@drawable/ic_blue_checkmark" android:layout_marginStart="5dp"/>
    </LinearLayout>
    <TextView android:textColor="#999" android:id="@+id/user_info_label_age" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile_age" android:layout_below="@+id/user_info_label_name"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/user_info_age" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/user_info_label_age" android:layout_below="@+id/user_info_label_name"/>
    <TextView android:textColor="#999" android:id="@+id/user_info_label_gender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile_gender" android:layout_below="@+id/user_info_label_age"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/user_info_gender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/user_info_label_gender" android:layout_below="@+id/user_info_age"/>
    <TextView android:textColor="#999" android:id="@+id/user_info_label_relationshipstatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile_relationship_status" android:layout_below="@+id/user_info_label_gender"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/user_info_relationshipstatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/user_info_label_relationshipstatus" android:layout_below="@+id/user_info_gender"/>
    <TextView android:textColor="#999" android:id="@+id/user_info_label_interestedin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile_interested_in" android:layout_below="@+id/user_info_label_relationshipstatus"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/user_info_interestedin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/user_info_label_interestedin" android:layout_below="@+id/user_info_relationshipstatus"/>
    <TextView android:textColor="#999" android:id="@+id/user_info_label_profileviewcount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_profile_profile_viewed" android:layout_below="@+id/user_info_label_interestedin"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/user_info_profileviewcount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/user_info_label_profileviewcount" android:layout_below="@+id/user_info_interestedin"/>
</RelativeLayout>
